
syntax = "proto3";

package kiki.synctwin;
option go_package = "synctwin/proto;proto";

// Simulation request for SyncTwin
message SimulationRequest {
    string strategy_json = 1; // JSON-encoded campaign strategy
    string client_id = 2;
    string platform = 3; // Target platform (meta, google, tiktok, etc.)
    double budget = 4;
    double target_ltv = 5;
    double roi_threshold = 6;
}

// Simulation result returned by SyncTwin
message SimulationResult {
    double confidence_score = 1; // 0.0-1.0
    string risk_profile = 2; // "conservative" | "moderate" | "aggressive"
    double projected_net_profit_uplift = 3;
    string reason = 4;
    repeated string violations = 5;
}

service SyncTwinService {
    rpc SimulateStrategy(SimulationRequest) returns (SimulationResult);
    // Chaos test for market shock scenarios
    rpc RunChaosTest(SimulationRequest) returns (SimulationResult);
    // Real-to-Sim synchronization
    rpc MirrorSync(SimulationRequest) returns (SimulationResult);
}
